@@ -7,6 +7,10 @@ ubiquity (1.9.10) UNRELEASED; urgency=low
   * Update debconf strings for summary template page on mythbuntu 
     frontend.
 
+  [ Colin Watson ]
+  * GTK frontend:
+    - Fix widget/method name clash that broke the Quit button (LP: #257962).
+
  -- Mario Limonciello <superm1@ubuntu.com>  Thu, 14 Aug 2008 23:02:42 -0500
 
 ubiquity (1.9.9) intrepid; urgency=low
